--- a/example/localform/package.json
+++ b/example/localform/package.json
@@ -7,17 +7,17 @@
     "start": "webpack-dev-server --host 0.0.0.0"
   },
   "dependencies": {
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "react-redux": "^5.0.7",
-    "react-redux-form": "^1.16.8",
-    "redux": "^4.0.0"
+    "react": "16.3.2",
+    "react-dom": "16.3.2",
+    "react-redux": "5.0.7",
+    "react-redux-form": "1.16.8",
+    "redux": "4.0.0"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^4.5.1",
-    "haxe-loader": "^0.7.4",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^2.1.2",
-    "webpack-dev-server": "^3.1.3"
+    "copy-webpack-plugin": "4.5.1",
+    "haxe-loader": "0.7.4",
+    "webpack": "4.6.0",
+    "webpack-cli": "2.1.2",
+    "webpack-dev-server": "3.1.3"
   }
 }
